app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* #react-multiple-carousel */

.react-multiple-carousel__arrow {
  background-color: white;
  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
}

.react-multiple-carousel__arrow:hover {
  background-color: white;
  box-shadow: 0 0 10px rgba(0, 0, 0, .2);
}

.react-multiple-carousel__arrow::before {
  color: black;
  z-index: 1;
}

.react-multiple-carousel__arrow--left {
  left: 2%
}

.react-multiple-carousel__arrow--right {
  right: 2%
}

.react-multi-carousel-dot-list {
  position: relative;
}

.react-multi-carousel-dot button {
  @apply bg-blue-600 border-white
}

.react-multi-carousel-dot--active button {
  @apply bg-blue-600 border-blue-600
}

